primer algoritmo en js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JS</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <h1>Indumentaria JS</h1>
+    <script src="coder.js"></script>
 </body>
 </html>
